Draft for Algolia

--- a/_posts/2019-07-06-algolia.md
+++ b/_posts/2019-07-06-algolia.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "Barre de recherche avec Algolia"
 author: alexandre
+status: draft
 ---
 
 Dans ce tuto nous allons apprendre à construire une barre de recherche avec Algolia.
