--- a/_posts/2019-06-29-reviews.md
+++ b/_posts/2019-06-29-reviews.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "Reviews avec notations et moyennes"
+title:  "Ajouter des reviews avec notations et moyennes"
 author: alexandre
 ---
 
-Dans ce tuto nous allons apprendre à construire une formulaire avec des listes déroulantes.
+Dans ce tuto nous allons apprendre à ajouter des reviews sur notre application de réservations d'appartement.
 
 Nous supposons qu'il y a un model `Booking` et qu'il y'a déjà une application Rails avec plusieurs modèles.
 
