Add dificulty to blog post

--- a/_posts/2018-01-01-draft.md
+++ b/_posts/2018-01-01-draft.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "aaaaaaa"
 author: alexandre
+difficulty: 1
 status: draft
 ---
 
@@ -12,9 +13,9 @@ Nous supposons qu'il y a un model `Flat` et qu'il y'a déjà une application Rai
 ### Première étape
 
 
-### Seconde Étape: 
+### Seconde Étape:
 
 
-### Trosième Étape: 
+### Trosième Étape:
 
 
