set article to drafts

--- a/_posts/2019-05-01-staging.md
+++ b/_posts/2019-05-01-staging.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "Créer un pipeline sur Heroku"
 author: alexandre
+status: draft
 ---
 
 Lorsque vous développez de nouvelles features vous souhaitez souvent partager un url avec votre équipe de non-dév pour leurs montrer. Il est possible avec Heroku d'installer une app sur un autre serveur. On appelle cela un serveur de staging. 
@@ -45,7 +46,7 @@ staging:
   <<: *default
 ```
 
-## Quatrième étape: `staging.rb`
+## Quatrième étape: staging.rb
 
 Pour finir on copie la configuration de l'environnement de production à celui de staging avec la commande:
 
