--- a/_posts/2019-06-29-reviews.md
+++ b/_posts/2019-06-29-reviews.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "Ajouter des reviews avec notations et moyennes"
 author: alexandre
+status: draft
 ---
 
 Dans ce tuto nous allons apprendre à ajouter des reviews sur notre application de réservations d'appartement.
