Update heroku database post

--- a/_posts/2000-01-01-draft.md
+++ b/_posts/2000-01-01-draft.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "aaaaaaa"
 description: "bbbb"
+seo_description: "Installer back office avec gem administrate"
 difficulty: 1
 status: draft
 ---
