Publish Post Rails AWS S3

--- a/_posts/2021-08-09-rails-aws-s3.md
+++ b/_posts/2021-08-09-rails-aws-s3.md
@@ -4,7 +4,7 @@ title:  "Setup de AWS S3 pour Active Storage"
 description: "Dans ce tuto nous allons apprendre comment configurer AWS S3 pour stocker les assets de votre app."
 seo_description: "AWS S3 Active Storage"
 difficulty: 1
-status: draft
+status: tech
 ---
 
 Dans ce tuto nous allons apprendre à comment configurer AWS S3 pour stocker les assets de votre app.
