Update post title

--- a/_posts/2021-08-09-rails-aws-s3.md
+++ b/_posts/2021-08-09-rails-aws-s3.md
@@ -15,7 +15,7 @@ Nous supposons que vous avez une application avec a minima Ruby on Rails 6.0
 2. Créer une stratégie d'accès pour les futurs utilisateurs.
 3. Créer un utilisateur et lui associer une stratégie.
 
-### 0. Setup
+## 0. Setup
 
 Le setup étant terminé pour l'environnement local, nous allons installer AWS sur la prod. Tout d'abord il faut ajouter la gem AWS dans le `Gemfile` et l'installer avec `bundle install`
 
@@ -31,7 +31,7 @@ $ bundle install
 Pour créer un compte, allez sur le site <a href="https://aws.amazon.com/" class="underlined" target="_blank">d'Amazon Web Services</a>.Ensuite connectez vous à la console AWS. La configuration du compte se fera en 3 temps.
 
 
-### 1. Créer son bucket
+## 1. Créer son bucket
 
 Vous devez cliquer sur **Services** puis recherchez **S3**. Ensuite vous cliquez sur **Créer un compartiment**. Dans le nom du compartiment vous mettez le nom de votre app. Et pour la région, il faut choisir l'Irlande si vous êtes chez Heroku.
 
@@ -39,7 +39,7 @@ Vous devez cliquer sur **Services** puis recherchez **S3**. Ensuite vous cliquez
      class="image"
      alt="AWS S3">
 
-### 2. Créer une stratégie
+## 2. Créer une stratégie
 
 Vous faites une nouvelle recherche dans **Services** et vous recherchez **IAM**. Nous allons maintenant créer une **stratégie**.
 
@@ -55,7 +55,7 @@ Pour le nom il faut être le plus clair possible en explicitant le nom du bucket
      class="image"
      alt="Examiner une Stratégie">
 
-### 3. Créer un utilisateur
+## 3. Créer un utilisateur
 
 Pour les utilisateurs il faut choisir un nom d'utilisateur et ensuite un service. Ici ça sera encore une fois S3. Ensuite on va sur l'onglet **Attacher les stratégies** pour ajouter celle qu'on a crée juste avant. Pour les étapes 3 et 4 on peut mettre OK. AWS va ensuite nous donner les clés API que l'on doit mettre sur Heroku sous le nom de **S3_ACCESS_KEY_ID** et **S3_SECRET_ACCESS_KEY**.
 
@@ -73,7 +73,7 @@ Et pour le type d'accès ça sera **programatique** c'est à dire que c'est un p
      class="image"
      alt="sélectionnez un type d'accès">
 
-### 4. Configuration des variables d'environnement.
+## 4. Configuration des variables d'environnement.
 
 Il faut maintenant spécifier qu'*Active Storage* doit utiliser *Amazon* sur l'environnement de production.
 
@@ -108,7 +108,7 @@ Rails.application.configure do
 end
 ```
 
-### [BONUS] Seeder des images
+## [BONUS] Seeder des images
 
 ```ruby
 # db/seeds.rb
