Suppression de la description pour les blog post

--- a/_posts/2021-08-09-rails-aws-s3.md
+++ b/_posts/2021-08-09-rails-aws-s3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Setup de AWS S3 pour Active Storage"
+title:  "Configuration de AWS S3 avec ActiveStorage pour Ruby on Rails"
 description: "Dans ce tuto nous allons apprendre comment configurer AWS S3 pour stocker les assets de votre app."
 seo_description: "AWS S3 Active Storage"
 difficulty: 1
