--- a/_posts/2024-10-01-to-proc.md
+++ b/_posts/2024-10-01-to-proc.md
@@ -1,15 +1,15 @@
 ---
 layout: post
-title:  "Les procs"
-description: "Les procs"
-seo_description: "Les procs"
+title:  "Comment utiliser les procs en Ruby"
+description: "Les procs dans Ruby"
+seo_description: "Les procs dans Ruby"
 difficulty: 1
 status: tech
 ---
 
 Dans ce tuto nous allons apprendre à utiliser un proc.
 
-### Première étape
+### Exemple avec un Builder
 
 Dans une <a href="https://www.youtube.com/watch?v=qdbS-qJOOeA&ab_channel=RubyCademy" class="underlined" target="_blank">vidéo Youtube</a>
 
@@ -58,9 +58,30 @@ Ensuite la méthode to_proc va retourner un proc qui est un block de code.
 
 Un proc est une instance de la classe `Proc`. C’est un objet qui peut être lié à une variable et réutilisé. Il se définit en appelant Proc.new ou proc suivi d’un block. Un proc va pouvoir récupérer des arguments pour les traiter.
 
-Dans notre exemple il récupère le Hash avec les data des users pour ensuite instantier le builder et appeler la méthode build.
+Dans notre exemple il récupère le Hash avec les data des users pour ensuite instancier le builder et appeler la méthode build.
 
 Pour aller plus loin sur les procs, il y'a <a href="https://medium.com/rubycademy/mastering-the-unary-ampersand-operator-with-blocks-cb5a48aca175" class="underlined" target="_blank">cet excellent article</a> toujours de RubyCademy.
 
 
+### Autre exemple
 
+Un proc peut aussi aider à rendre plus lisible un `case` (switch statement) comme dans l'exemple ci-dessous.
+
+```ruby
+def is_even
+  Proc.new {|x| x % 2 == 0 }
+end
+
+def is_odd
+  Proc.new {|x| x % 2 == 1 }
+end
+
+number = 4
+
+case number
+when is_even
+  puts "#{number} is even"
+when is_odd
+  puts "#{number} is odd"
+end
+```
