Add one exemple in to proc post

--- a/_posts/2024-10-01-to-proc.md
+++ b/_posts/2024-10-01-to-proc.md
@@ -85,3 +85,17 @@ when is_odd
   puts "#{number} is odd"
 end
 ```
+
+### Chainer les procs
+
+Une exemple de <a href="https://x.com/RubyCademy/status/1865459177184706720" class="underlined" target="_blank">RubyCademy</a> nous permet une utilation encore plus avancé des procs inspiré de la programmation fonctionnelle.
+
+```ruby
+strip        = proc { |email| email.strip }
+downcase     = proc { |email| email.downcase }
+remove_alias = proc { |email| email.gsub(/\+.*@/, '@') }
+
+email = "  Test+alias@example.com   "
+
+(strip >> downcase >> remove_alias).call(email)
+```
