Update 'to proc' post

--- a/_posts/2024-10-01-to-proc.md
+++ b/_posts/2024-10-01-to-proc.md
@@ -7,7 +7,7 @@ difficulty: 1
 status: tech
 ---
 
-Dans ce tuto nous allons apprendre à utiliser un proc.
+Dans cet article nous allons apprendre à utiliser un proc.
 
 ### Exemple avec un Builder
 
@@ -99,3 +99,21 @@ email = "  Test+alias@example.com   "
 
 (strip >> downcase >> remove_alias).call(email)
 ```
+
+### Articles pour aller plus loin
+
+<a href="https://www.codewithjason.com/ampersand-ruby-block/"
+   class="underlined"
+   target="_blank">
+  Qu'est qu'un block en Ruby ? (Code With Jason)
+</a>
+<br>
+<a href="https://medium.com/rubycademy/mastering-the-unary-ampersand-operator-with-blocks-cb5a48aca175" class="underlined" target="_blank">
+  Unary Operator with Blocks (RubyCademy)
+</a>
+<br>
+<a href="https://www.codewithjason.com/ruby-procs/"
+   class="underlined"
+   target="_blank">
+  Understanding Ruby Proc objects (Code With Jason)
+</a>
